# try-fasthtml

./: .gitignore  README.md  pyproject.toml
app/: config.toml  dataframe.css  fasthtml_helper.py  test_get_post.py  test_minimal.py  test_minimal2.py  test_movie_data.py  test_movie_data_class.py  test_show_some_features.py
